unpackaged/main/default/objects/Chart_of_Account_Key__c/Chart_of_Account_Key__c.object-meta.xml
<CustomObject>
    <label>Chart of Account Key</label>
    <nameField>
        <displayFormat>CAK-{00000}</displayFormat>
        <label>Chart of Account Key Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Chart of Accounts Key</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>