unpackaged/main/default/objects/Chart_of_Account_Key__c/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <label>Key</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LOAN__c</fullName>
                <label>LOAN</label>
            </value>
            <value>
                <fullName>FRPSA__c</fullName>
                <label>FRPSA</label>
            </value>
            <value>
                <fullName>NFAS2__c</fullName>
                <label>NFAS2</label>
            </value>
            <value>
                <fullName>FRPS2__c</fullName>
                <label>FRPS2</label>
            </value>
            <value>
                <fullName>QBF__c</fullName>
                <label>QBF</label>
            </value>
            <value>
                <fullName>QBF_FRPSA__c</fullName>
                <label>QBF+FRPSA</label>
            </value>
            <value>
                <fullName>QBtoNF__c</fullName>
                <label>QBtoNF</label>
            </value>
            <value>
                <fullName>NFtoNFAS2__c</fullName>
                <label>NFtoNFAS2</label>
            </value>
            <value>
                <fullName>NFAS2toNF__c</fullName>
                <label>NFAS2toNF</label>
            </value>
            <value>
                <fullName>NFtoQB__c</fullName>
                <label>NFtoQB</label>
            </value>
            <value>
                <fullName>NFSPV1__c</fullName>
                <label>NFSPV1</label>
            </value>
            <value>
                <fullName>NFSPV1_FRPSA__c</fullName>
                <label>NFSPV1+FRPSA</label>
            </value>
            <value>
                <fullName>NFtoNFSPV1__c</fullName>
                <label>NFtoNFSPV1</label>
            </value>
            <value>
                <fullName>NFSPV1toNF__c</fullName>
                <label>NFSPV1toNF</label>
            </value>
            <value>
                <fullName>NFSPV2__c</fullName>
                <label>NFSPV2</label>
            </value>
            <value>
                <fullName>NFSPV2_FRPSA__c</fullName>
                <label>NFSPV2+FRPSA</label>
            </value>
            <value>
                <fullName>NFtoNFSPV2__c</fullName>
                <label>NFtoNFSPV2</label>
            </value>
            <value>
                <fullName>NFSPV2toNF__c</fullName>
                <label>NFSPV2toNF</label>
            </value>
            <value>
                <fullName>NFAS3__c</fullName>
                <label>NFAS3</label>
            </value>
            <value>
                <fullName>FRPS3__c</fullName>
                <label>FRPS3</label>
            </value>
            <value>
                <fullName>NFtoNFAS3__c</fullName>
                <label>NFtoNFAS3</label>
            </value>
            <value>
                <fullName>NFAS3toNF__c</fullName>
                <label>NFAS3toNF</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>