unpackaged/main/default/objects/Chart_of_Account_Key__c/fields/Previous_Company__c.field-meta.xml
<CustomField>
    <fullName>Previous_Company__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Previous Company</label>
    <referenceTo>cmbls__Fund__c</referenceTo>
    <relationshipLabel>Chart of Accounts Key</relationshipLabel>
    <relationshipName>Chart_of_Accounts_Key2</relationshipName>
    <type>Lookup</type>
</CustomField>